# Project-tjr104-dev-workspace

./: .env.template  README.md  pyproject.toml
Lab/2026-01-23_weather_map_with_sidebar/: weather_map_with_sidebar.html  weather_map_with_sidebar.py
archive/2026-01-28_cross-domain-data-integration-folium-streamlit/: import_weather.py  night_market_data.csv
doc_weekly_logs/: 2026-01-21_traffic-accidents-crawler-mysql-ingestion.md  2026-01-28_cross-domain-data-integration-folium-streamlit.md  2026-02-04_Performance Optimization & Regional Risk Analysis (1.5M+ Data).md
src/: app.py  apply_view_adv.py  db_utils.py  import_night_market.py  import_traffic.py  import_view_manager.py  import_weather.py  import_weather_station.py  test_db_check.py
src/2026-01-21_traffic-accidents-crawler-mysql-ingestion/: 111year_traffic_Crawler.ipynb  111year_traffic_data.sql  111year_traffic_website.py
