[project]
name = "tibame"
version = "0.1.0"
description = ""
authors = [
    {name = "Angie_Ai",email = "angie.ai.zer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas (>=1.1.2,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "flask (>=3.1.2,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "osmnx (>=2.0.7,<3.0.0)",
    "streamlit (>=1.53.1,<2.0.0)",
    "streamlit-folium (>=0.26.1,<0.27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
